# TeXCollector

./: .gitignore  CLA.md  Cargo.toml  LICENSE  README.md  main.tex  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cla.yaml  cla.yml  release.yml  test.yml
docker/: Dockerfile  Dockerfile.dev  compose.yaml
files/input/: 0_abstract.tex  1_introduction.tex  sources.bib  title.tex
files/input/pre_print/: main.tex
python_example/: collect.py
src/: cli.rs  collector.rs  lib.rs  main.rs
src/files/: copy_files.rs  create.rs  mod.rs
src/lexer/: token.rs
src/parser/: check_line.rs  commands.rs  find_brackets.rs  find_commands.rs  mod.rs  parser.rs  read_lines.rs  utils.rs
src/texcollector/: main.py
tests/: collector_test.rs  token_test.rs
tests/files/input/: 0_abstract.tex  1_introduction.tex  sources.bib  title.tex
tests/files/input/pre_print/: main.tex
