[package]
name = "texcollector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
regex = "1.10.2"
simple_logger = "4.2.0"
log = "0.4.19"
logos = "0.13.0"
strum = "0.25.0"
strum_macros = "0.25.3"
