[tool.poetry]
name = "texcollector"
version = "0.1.0"
description = "CLI tool meant for collecting LaTeX source."
authors = ["Andrzej 'Kaszanas' Białecki"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
